# how-many

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  django.sh  manage.py  pyproject.toml  requirements.txt
api/: admin.py  filters.py  models.py  serializers.py  swagger.py  views.py
api/tests/: test_card_deck_model.py  test_card_model.py  test_deck_model.py  test_decklist_data_manager.py  test_decklist_parser.py
api/utils/: analyzer.py  manager.py
api/utils/parser/: card.py  decklist.py  parser.py  section.py
decklist_analyzer/: apps.py  urls.py  views.py
decklist_analyzer/static/decklist_analyzer/js/: results_scroll.js
decklist_analyzer/templates/decklist_analyzer/: index.html
decklist_analyzer/utils/: analyzer.py
how_many/: asgi.py  settings.py  urls.py  wsgi.py
lands/: urls.py  views.py
lands/static/lands/: form_validation.js
lands/static/lands/css/: lands.css
lands/static/lands/js/: decklist_form.js  sidebar.js
lands/utils/: analyzer.py  decklist_parser.py
static/css/: global.css
templates/: about_us.html  base.html  privacy_policy.html  terms_of_service.html
templates/lands/: about.html  about_us.html  base.html  index.html  privacy.html  privacy_policy.html
templates/lands/partials/: _header.html
templates/partials/: _header.html
utils/: analyzer.py  card_data_fetcher.py  project_info.py
