[tool.poetry]
name = "how-many"
version = "0.1.0"
description = "Easy-to-use tool to build decks with a more consistent mana base"
authors = ["Marcos Raulino <marcosfsraulino@gmail.com>"]
readme = "README.md"
packages = [{include = "how_many"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
whitenoise = "^6.5.0"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
commitizen = "^3.6.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
