[tool.poetry]
name = "how-many"
version = "0.1.0"
description = "Easy-to-use tool to build decks with a more consistent mana base"
authors = ["Marcos Raulino <marcosfsraulino@gmail.com>"]
readme = "README.md"
packages = [{include = "how_many"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
djangorestframework = "^3.14.0"
django-filter = "^23.5"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
drf-yasg = "^1.21.7"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"

[tool.isort]
profile = "black"
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
